# CleanTelegram

./: .coveragerc  .env.example  .flake8  .gitignore  .mcp.json  CLAUDE.md  README.md  ROADMAP.md  TEST_COVERAGE_ANALYSIS.md  clean_telegram.py  pyproject.toml  pytest.ini  repomix-output.xml  requirements-dev.txt  requirements.txt  run_clean_telegram.py
.claude/: settings.json
.hive/: issues.jsonl
.omc/autopilot/: IMPLEMENTATION_PLAN.md  spec.md
.omc/drafts/: test_coverage_phase1_plan.md
.omc/state/: agent-replay-250b2496-3ab4-4b18-81fc-fa3018b35aaf.jsonl
docs/: FASES_IMPLEMENTACAO.md  UX_FLOW.md
docs/archive/: coderabbit_review_2025-02-16.md
src/clean_telegram/: __init__.py  __main__.py  backup.py  cleaner.py  cli.py  client.py  config.py  interactive.py  reports.py  ui.py  utils.py
tests/: __init__.py  conftest.py  test_backup_cloud.py  test_cleaner.py  test_cleaner_extended.py  test_cli_auth.py  test_cli_core.py  test_cli_extended.py  test_client.py  test_config.py  test_interactive_backup.py  test_interactive_extended.py  test_interactive_menu.py  test_main.py  test_performance.py  test_reports.py  test_reports_extended.py  test_ui.py  test_utils.py
