[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clean-telegram"
version = "1.1.0"
description = "Script para limpar conta Telegram via Telethon"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "telethon==1.42.0",
    "python-dotenv==1.2.1",
    "questionary==2.1.1",
    "rich>=13.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

# Dependências opcionais para otimizações de performance
optional = [
    "orjson>=3.10.0",  # JSON rápido (2-3x mais rápido que stdlib)
]
